--- a/index.html
+++ b/index.html
@@ -28,15 +28,8 @@ License URL: https://creativecommons.org/licenses/by/4.0/
         <meta name="twitter:site" content="BoostrapTheme" />
         <meta name="twitter:creator" content="BoostrapTheme" />
 
-        <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-        <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
-        <link rel="stylesheet" href="css/owl.carousel.min.css">
-        <link rel="stylesheet" href="css/owl.theme.default.min.css">
-        <link rel="stylesheet" href="css/animate.min.css">
-        <link rel="stylesheet" href="css/app.css">
-
-        <script src="js/jquery.min.js"></script>
+<link rel="stylesheet" href="/atol/src/css/style.css">
+            <script src="js/jquery.min.js"></script>
         <script> $(window).on('load', function(){ $(".loader").fadeOut(2000); }); </script>
 
     </head>
@@ -105,8 +98,8 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <div class="container">
                 <div class="row first">
                   <div class="col-md-4 wow flipInX" data-wow-delay="0.3s">
-                    <img src="img/app/five.jpg" alt="" class="first img-fluid">
-                    <img src="img/app/second.jpg" alt="" class="second img-fluid">
+                    <img src="atol/src/img/app/five.jpg" alt="" class="first img-fluid">
+                    <img src="atol/src/img/app/second.jpg" alt="" class="second img-fluid">
                   </div> 
                   <div class="col-md-6 m-auto wow fadeInRight" data-wow-delay="0.6s">
                     <div class="app-about-cont">
@@ -125,8 +118,8 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                     </div>
                   </div>
                   <div class="col-md-4 wow flipInX" data-wow-delay="0.6s">
-                    <img src="img/app/seventh.jpg" alt="" class="third img-fluid">
-                    <img src="img/app/six.jpg" alt="" class="fourth img-fluid">
+                    <img src="atol/src/img/app/seventh.jpg" alt="" class="third img-fluid">
+                    <img src="atol/src/img/app/six.jpg" alt="" class="fourth img-fluid">
                   </div> 
                 </div> 
               </div>
@@ -170,7 +163,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                   </div>
                   <div class="col-md-4 wow bounceInUp" data-wow-delay="0.6s">
                     <div class="servie-img text-center">
-                      <img src="img/iphone-x.png" alt="" class="img-fluid">
+                      <img src="atol/src/img/iphone-x.png" alt="" class="img-fluid">
                     </div>
                   </div>
                   <div class="col-md-4 wow fadeInRight" data-wow-delay="0.9s">
@@ -207,7 +200,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                 <div class="row">
                   <div class="col-md-6">
                     <div class="faq-img">
-                      <img src="img/doubel-mobile.png" alt="" class="img-fluid">
+                      <img src="atol/src/img/doubel-mobile.png" alt="" class="img-fluid">
                     </div>
                   </div>
                   <div class="col-md-6 col-sm-12 wow fadeInUp mt-5 mx-auto" data-wow-delay="0.6s">
